ChangeLog for package rkwarddev

## 0.04-12 (2011-12-11)
  - fixed issue with "about" not being an XML node in rk.plugin.skeleton()

## 0.04-11 (2011-12-10)
  - ite() now supports full recursion also for the "thenjs" option.
  - fixed superfluous first newline in rk.JS.vars()

## 0.04-10 (2011-12-05)
  - when using rk.comment() for logic scripting, its contents will automatically be placed inside a <script> node now

## 0.04-9 (2011-12-03)
  - left over stuff from JS printout() function is now added to doPrintout()

## 0.04-8 (2011-11-10)
  - R 2.14 creates source archives which are incompatible with earlier versions. attempt to deal with this
    by adding empty R directory and NAMESPACE file

## 0.04-7 (2011-11-08)
  - added long description support to rk.XML.about(), used for the DESCRIPTION file

## 0.04-6 (2011-10-31)
  - added <frame> to the tags which are scanned by rk.JS.scan(), they're considered only if checkable
  - improved output of rk.JS.var class objects by rk.paste.JS()

## 0.04-5 (2011-10-28)
  - set dependency of rkward to >= 0.5.6 to work around a glitch in rkward's package versioning.
    this can cause errors on real 0.5.6 installations because they lack functions introduced
    in 0.5.7 (to add & load a plugin automatically), but shouldn't really break anything
  - added support to turn off modifier checks to rk.XML.set()
  - added option "load.silencer" to rk.JS.doc(), to easily add a switch to turn off package load messages in output.

## 0.04-4 (2011-10-26)
  - fixed bug in check for valid modifiers (used to warn when mixed lists with/without modifiers were given)
  - fixed bug in rk.XML.convert() (false output if provided with list without modifiers)
  - added option "check.modifiers" to rk.JS.vars()

## 0.04-3 (2011-10-22)
  - added support for definint doPrintout() JS functions to rk.JS.doc(), rk.plugin.skeleton() and
    rk.plugin.component()