@@ -77,4 +77,5 @@ export(rk.XML.vars)
 export(rk.XML.varselector)
 export(rk.XML.varslot)
 export(rk.XML.wizard)
+export(tf)
 import(methods)
