@@ -1,6 +1,7 @@
 ChangeLog for package rkwarddev
 
 ## 0.04-12 (2011-12-11)
+  - added function tf() for even quicker JavaScript code generation from checkboxes
   - fixed issue with "about" not being an XML node in rk.plugin.skeleton()
 
 ## 0.04-11 (2011-12-10)
